Need To Update Files

--- a/blog.html
+++ b/blog.html
@@ -20,9 +20,65 @@
       <!--a new entry post starts here.-->
       <!--NEW-->
 
+
+<div class=entry-overview>
+<!--Add the Post Here -->
+<div class=date>
+<!-- The Date in Line (5) -->
+29/12/2014
+</div>
+<div class=detail>
+<!-- The link in Line (9) -->
+<h1><a href="
+checkinggitentry.html
+">
+<!-- The Post Title in Line (10) -->
+Checking GIT Entry
+</a></h1>
+<div class=summary>
+<p>
+Nothing Much Just Checking Further.
+<!-- The Small Detail in Line (15) -->
+</p>
+</div>
+</div>
+</div><div class=entry-overview>
+<!--Add the Post Here -->
+<div class=date>
+<!-- The Date in Line (5) -->
+29/12/2014
+</div>
+<div class=detail>
+<!-- The link in Line (9) -->
+<h1><a href="
+myinitialentry.html
+">
+<!-- The Post Title in Line (10) -->
+My Initial Entry
+</a></h1>
+<div class=summary>
+<p>
+Testing whether all systems a GO-GO or not.
+<!-- The Small Detail in Line (15) -->
+</p>
+</div>
+</div>
+</div>
 <!--END_OF_ENTRY-->      
   </div>
 </div>
+<!--
+        <div class=adspace>
+          <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+          <ins class="adsbygoogle"
+               style="display:inline-block;width:728px;height:90px"
+               data-ad-client="ca-pub-6757320953560275"
+               data-ad-slot="8324866143"></ins>
+          <script>
+          (adsbygoogle = window.adsbygoogle || []).push({});
+          </script>
+        </div>
+-->
 
       <div class=footer>
         <p>Blog Powered using <a href="">CaffeinePost</a></p>
