Removing Extra Outdated files.

--- a/blog.html
+++ b/blog.html
@@ -21,49 +21,7 @@
       <!--NEW-->
 
 
-<div class=entry-overview>
-<!--Add the Post Here -->
-<div class=date>
-<!-- The Date in Line (5) -->
-29/12/2014
-</div>
-<div class=detail>
-<!-- The link in Line (9) -->
-<h1><a href="
-checkinggitentry.html
-">
-<!-- The Post Title in Line (10) -->
-Checking GIT Entry
-</a></h1>
-<div class=summary>
-<p>
-Nothing Much Just Checking Further.
-<!-- The Small Detail in Line (15) -->
-</p>
-</div>
-</div>
-</div><div class=entry-overview>
-<!--Add the Post Here -->
-<div class=date>
-<!-- The Date in Line (5) -->
-29/12/2014
-</div>
-<div class=detail>
-<!-- The link in Line (9) -->
-<h1><a href="
-myinitialentry.html
-">
-<!-- The Post Title in Line (10) -->
-My Initial Entry
-</a></h1>
-<div class=summary>
-<p>
-Testing whether all systems a GO-GO or not.
-<!-- The Small Detail in Line (15) -->
-</p>
-</div>
-</div>
-</div>
+
 <!--END_OF_ENTRY-->      
   </div>
 </div>
@@ -81,7 +39,8 @@ Testing whether all systems a GO-GO or not.
 -->
 
       <div class=footer>
-        <p>Blog Powered using <a href="">CaffeinePost</a></p>
+        <p>Blog Powered using <a href="http://github.com/ankitvad/caffeinepost">CaffeinePost</a></p>
+        <p><a href="http://ankit-vadehra.co.nr/">Ankit Vadehra</a></p>
         <p>You can find me at:</p>
         <p><a href="http://github.com/ankitvad">GitHub</a>, <a href="http://www.linkedin.com/in/ankitvad">LinkedIn</a>, <a href="https://www.facebook.com/ankit.vadehra">Facebook</a>,<br><a href="https://plus.google.com/+AnkitVadehr%C4%81">Google+</a>, <a href="http://www.quora.com/Ankit-Vadehra">Quora</a>, <a href="http://www.twitter.com/ankitvad">Twitter</a></p>
         
