--- a/projects.html
+++ b/projects.html
@@ -1,13 +1,13 @@
 <html>
   <head>
     <meta charset=utf-8>
-    <title>Blog |-Ankit Vadehra</title>
+    <title>Projects |-Ankit Vadehra</title>
     <link rel="stylesheet" href="style.css" type="text/css">
    </head>
   <body>
     <div class=container>
       <div class=header>
-        <a href="http://ankit-vadehra.co.nr/">Ankit Vadehra</a> (Thoughts and Musings.)
+        <a href="http://ankit-vadehra.co.nr/">Ankit Vadehra</a> (Projects and Musings.)
       </div>
       <div class=navigation>
         <ul>
@@ -23,11 +23,11 @@
 <!--Add the Post Here -->
 <div class=date>
 <!-- The Date in Line (5) -->
+Dec, 2014
 </div>
 <div class=detail>
 <!-- The link in Line (9) -->
-<h1><a href="
-">
+<h1><a href="http://github.com/ankitvad/caffeinepost">CaffeinePost
 <!-- The Post Title in Line (10) -->
 </a></h1>
 <div class=summary>
@@ -42,7 +42,8 @@
 </div>
 
       <div class=footer>
-        <p>Blog Powered using <a href="">CaffeinePost</a></p>
+        <p>Blog Powered using <a href="http://github.com/ankitvad/caffeinepost">CaffeinePost</a></p>
+        <p><a href="http://ankit-vadehra.co.nr/">Ankit Vadehra</a></p>
         <p>You can find me at:</p>
         <p><a href="http://github.com/ankitvad">GitHub</a>, <a href="http://www.linkedin.com/in/ankitvad">LinkedIn</a>, <a href="https://www.facebook.com/ankit.vadehra">Facebook</a>,<br><a href="https://plus.google.com/+AnkitVadehr%C4%81">Google+</a>, <a href="http://www.quora.com/Ankit-Vadehra">Quora</a>, <a href="http://www.twitter.com/ankitvad">Twitter</a></p>
         
