--- a/blog.html
+++ b/blog.html
@@ -7,7 +7,7 @@
   <body>
     <div class=container>
       <div class=header>
-        <a href="http://ankit-vadehra.co.nr/">Ankit Vadehra</a> (Thoughts and Musings.)
+        <a href="http://ankitvad.ml/">Ankit Vadehra</a> (Thoughts and Musings.)
       </div>
       <div class=navigation>
         <ul>
@@ -25,22 +25,10 @@
 <!--END_OF_ENTRY-->      
   </div>
 </div>
-<!--
-        <div class=adspace>
-          <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-          <ins class="adsbygoogle"
-               style="display:inline-block;width:728px;height:90px"
-               data-ad-client="ca-pub-6757320953560275"
-               data-ad-slot="8324866143"></ins>
-          <script>
-          (adsbygoogle = window.adsbygoogle || []).push({});
-          </script>
-        </div>
--->
 
       <div class=footer>
         <p>Blog Powered using <a href="http://github.com/ankitvad/caffeinepost">CaffeinePost</a></p>
-        <p><a href="http://ankit-vadehra.co.nr/">Ankit Vadehra</a></p>
+        <p><a href="http://ankitvad.ml/">Ankit Vadehra</a></p>
         <p>You can find me at:</p>
         <p><a href="http://github.com/ankitvad">GitHub</a>, <a href="http://www.linkedin.com/in/ankitvad">LinkedIn</a>, <a href="https://www.facebook.com/ankit.vadehra">Facebook</a>,<br><a href="https://plus.google.com/+AnkitVadehr%C4%81">Google+</a>, <a href="http://www.quora.com/Ankit-Vadehra">Quora</a>, <a href="http://www.twitter.com/ankitvad">Twitter</a></p>
         
