--- a/projects.html
+++ b/projects.html
@@ -7,7 +7,7 @@
   <body>
     <div class=container>
       <div class=header>
-        <a href="http://ankit-vadehra.co.nr/">Ankit Vadehra</a> (Projects and Musings.)
+        <a href="http://ankitvad.ml/">Ankit Vadehra</a> (Projects and Musings.)
       </div>
       <div class=navigation>
         <ul>
@@ -43,7 +43,7 @@ Dec, 2014
 
       <div class=footer>
         <p>Blog Powered using <a href="http://github.com/ankitvad/caffeinepost">CaffeinePost</a></p>
-        <p><a href="http://ankit-vadehra.co.nr/">Ankit Vadehra</a></p>
+        <p><a href="http://ankitvad.ml/">Ankit Vadehra</a></p>
         <p>You can find me at:</p>
         <p><a href="http://github.com/ankitvad">GitHub</a>, <a href="http://www.linkedin.com/in/ankitvad">LinkedIn</a>, <a href="https://www.facebook.com/ankit.vadehra">Facebook</a>,<br><a href="https://plus.google.com/+AnkitVadehr%C4%81">Google+</a>, <a href="http://www.quora.com/Ankit-Vadehra">Quora</a>, <a href="http://www.twitter.com/ankitvad">Twitter</a></p>
         
